--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,21 @@
-
-
+#
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
 spring.mvc.static-path-pattern = /resources/**
+
+# Data source
+spring.datasource.url = jdbc:mySql://localhost:3306/jokenij_dev
+spring.datasource.username = konrad
+spring.datasource.password = konrad
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+# Hibernate
+spring.jpa.show-sql = true
+spring.jpa.hibernate.dll-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySql5Dialect
+
+# Spring Security
+spring.queries.users-query = SELECT EMAIL,PASSWORD,ACTIVE FROM USER WHERE EMAIL=?
+spring.queries.roles-query = SELECT U.EMAIL,R.ROLE FROM USER U INNER JOIN USER_ROLE UR ON(U.USER_ID=UR.USER_ID) INNER JOIN ROLE R ON(UR.ROLE_ID=R.ROLE_ID) WHERE U.EMAIL=?
