--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,36 @@ spring.mvc.view.suffix= .jsp
 spring.mvc.static-path-pattern = /resources/**
 
 # Data source
-spring.datasource.url = jdbc:mySql://localhost:3306/jokenij_dev
-spring.datasource.username = konrad
-spring.datasource.password = konrad
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+#spring.datasource.url = jdbc:mySql://localhost:3306/davyd_Jokenij?autoReconnect=true&useSSL=false
+#spring.datasource.username = davyd_admin
+#spring.datasource.password = davyd1984
+#spring.datasource.testWhileIdle = true
+#spring.datasource.validationQuery = SELECT 1
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:file:~/jokenij
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
 
 # Hibernate
 spring.jpa.show-sql = true
 spring.jpa.hibernate.dll-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySql5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Spring Security
 spring.queries.users-query = SELECT EMAIL,PASSWORD,ACTIVE FROM USER WHERE EMAIL=?
 spring.queries.roles-query = SELECT U.EMAIL,R.ROLE FROM USER U INNER JOIN USER_ROLE UR ON(U.USER_ID=UR.USER_ID) INNER JOIN ROLE R ON(UR.ROLE_ID=R.ROLE_ID) WHERE U.EMAIL=?
+
+#Logging
+logging.level.org.springframerwork.web = DEBUG
+logging.level.org.hibernate = ERROR
+logging.level.pl.dawydiuk = DEBUG
+logging.file = log_file.log
+logging.path = var/log
+
+#Internacjonalizacja konfig jest w video nr 2
