--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
 spring.mvc.static-path-pattern = /resources/**
+spring.resources.chain.strategy.content.enabled = true
+spring.resources.chain.strategy.content.paths = /**
 
 # Data source
 #spring.datasource.url = jdbc:mySql://localhost:3306/davyd_Jokenij?autoReconnect=true&useSSL=false
@@ -36,4 +38,9 @@ logging.level.pl.dawydiuk = DEBUG
 logging.file = log_file.log
 logging.path = var/log
 
-#Internacjonalizacja konfig jest w video nr 2
+#Internacjonalizacja
+spring.messages.always-use-message-format = false
+spring.messages.basename = messages
+spring.messages.cache-seconds = -1
+spring.messages.encoding = UTF-8
+spring.messages.fallback-to-system-locale = true
