--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,14 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>5.0.4.RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
