--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 server.port = 8090
+
+
 #
-spring.mvc.view.prefix= /WEB-INF/jsp/
-spring.mvc.view.suffix= .jsp
-spring.mvc.static-path-pattern = /resources/**
-spring.resources.chain.strategy.content.enabled = true
-spring.resources.chain.strategy.content.paths = /**
 
 # Data source
 #spring.datasource.url = jdbc:mySql://localhost:3306/davyd_Jokenij?autoReconnect=true&useSSL=false
@@ -24,9 +21,9 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 # Hibernate
 spring.jpa.show-sql = true
-spring.jpa.hibernate.dll-auto = update
+spring.jpa.hibernate.dll-auto = create
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Spring Security
 spring.queries.users-query = SELECT EMAIL,PASSWORD,ACTIVE FROM USER WHERE EMAIL=?
