11-cd reafactor controller and services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,17 +13,17 @@ server.port = 8090
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:file:~/jokenij
+spring.datasource.url=jdbc:h2:mem:jokenij
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Hibernate
-spring.jpa.show-sql = true
-spring.jpa.hibernate.dll-auto = create
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.dll-auto = create
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Spring Security
 spring.queries.users-query = SELECT EMAIL,PASSWORD,ACTIVE FROM USER WHERE EMAIL=?
